--- a/site/layouts/partials/skill.html
+++ b/site/layouts/partials/skill.html
@@ -1,4 +1,4 @@
-<li>
-    <div class='icon {{ .iconClass }}'>{{ safeHTML .icon }}</div>
-    <p class="text">{{ safeHTML .text }}</p>
+<li class="skill">
+    <div class='skill-icon {{ .iconClass }}'>{{ safeHTML .icon }}</div>
+    <p class="skill-text">{{ safeHTML .text }}</p>
 </li>
