--- a/src/styles/pages/_about.scss
+++ b/src/styles/pages/_about.scss
@@ -17,74 +17,42 @@
     margin: 0;
     padding: 0;
 
-    li {
-      display: flex;
-      flex-direction: column;
+    @supports (display: grid) {
+      display: grid;
+      grid-template-columns: repeat(auto-fill, minmax(180px, 1fr));
+      grid-gap: 1rem;
+    }
+  }
+
+  .skill {
+    display: flex;
+    flex-direction: column;
+    flex: 0 0 calc(100% / 2 - 1rem);
+    flex-basis: calc(100% / 2 - 1rem); // for IE11
+    min-height: 130px;
+    margin: .5rem;
+    list-style: none;
+    text-align: center;
+
+    @include respond-to(small) {
       flex: 0 0 calc(100% / 2 - 1rem);
       flex-basis: calc(100% / 2 - 1rem); // for IE11
-      min-height: 130px;
       margin: .5rem;
-      list-style: none;
-      text-align: center;
-
-      @include respond-to(small) {
-        flex: 0 0 calc(100% / 2 - 1rem);
-        flex-basis: calc(100% / 2 - 1rem); // for IE11
-        margin: .5rem;
-      }
-
-      @include respond-to(medium) {
-        flex: 0 0 calc(100% / 3 - 2rem);
-        flex-basis: calc(100% / 3 - 2rem); // for IE11
-        margin: 1rem;
-      }
-
-      @include respond-to(large) {
-        flex: 0 0 calc((100% / 4) - 2rem);
-        flex-basis: calc(100% / 4 - 2rem); // for IE11
-      }
-
-      .text {
-        flex-grow: 1;
-        position: relative;
-        display: flex;
-        justify-content: center;
-        flex-direction: column;
-        margin-top: 0;
-        padding: 10px;
-        border: 2px solid $green;
-        word-break: break-word;
-        hyphens: auto;
-
-        &::before {
-          content: '';
-          position: absolute;
-          top: -2px;
-          left: 50%;
-          transform: translateX(-50%);
-          height: 2px;
-          width: calc(100% - 40px);
-          background-color: #fff;
-        }
-      }
     }
 
-    .icon {
-      position: relative;
-      z-index: 10;
-      width: 40px;
-      height: 40px;
-      line-height: 40px;
-      margin: 0 auto -10px;
-      font-size: 2.5rem;
-      font-weight: bold;
-      fill: $blue;
-      color: $blue;
+    @include respond-to(medium) {
+      flex: 0 0 calc(100% / 3 - 2rem);
+      flex-basis: calc(100% / 3 - 2rem); // for IE11
+      margin: 1rem;
+    }
 
-      svg {
-        width: 100%;
-        height: 100%;
-      }
+    @include respond-to(large) {
+      flex: 0 0 calc((100% / 4) - 2rem);
+      flex-basis: calc(100% / 4 - 2rem); // for IE11
+    }
+
+    @supports (display: grid) {
+      margin: 0;
     }
 
     .html {
@@ -111,6 +79,48 @@
     .svg, .jam, .kiss {
       width: auto;
       font-size: 1.5rem;
+    }
+  }
+
+  .skill-text {
+    flex-grow: 1;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    margin-top: 0;
+    padding: 10px;
+    border: 2px solid $green;
+    word-break: break-word;
+    hyphens: auto;
+
+    &::before {
+      content: '';
+      position: absolute;
+      top: -2px;
+      left: 50%;
+      transform: translateX(-50%);
+      height: 2px;
+      width: calc(100% - 40px);
+      background-color: #fff;
+    }
+  }
+
+  .skill-icon {
+    position: relative;
+    z-index: 10;
+    width: 40px;
+    height: 40px;
+    line-height: 40px;
+    margin: 0 auto -10px;
+    font-size: 2.5rem;
+    font-weight: bold;
+    fill: $blue;
+    color: $blue;
+
+    svg {
+      width: 100%;
+      height: 100%;
     }
   }
 }
