Add some more space between skills

--- a/src/styles/pages/_about.scss
+++ b/src/styles/pages/_about.scss
@@ -20,7 +20,7 @@
     @supports (display: grid) {
       display: grid;
       grid-template-columns: repeat(auto-fill, minmax(180px, 1fr));
-      grid-gap: 1rem;
+      grid-gap: 1rem 3rem;
     }
   }
 
