Add new project

--- a/site/layouts/projects/single.html
+++ b/site/layouts/projects/single.html
@@ -26,7 +26,7 @@
                 <svg class="icon">
                     <use xlink:href="{{ .Site.BaseURL }}images/svg-symbols.svg#website"></use>
                 </svg>
-                Websites
+                Websites & web apps
             </h2>
             <ul class="project-list">
                 {{ range where .Site.Data.projects "category" "website" }}
