--- a/site/layouts/about/single.html
+++ b/site/layouts/about/single.html
@@ -122,10 +122,10 @@
                 {{ partial "skill" (dict "icon" "{ }" "text" "Responsive, well scoped CSS") }}
                 {{ partial "skill" (dict "icon" "( )" "text" "Modular, composable JavaScript") }}
                 {{ partial "skill" (dict "icon" "//" "text" "Well commented, maintainable code") }}
+                {{ partial "skill" (dict "icon" "<svg><use xlink:href='/images/svg-symbols.svg#vue'></use></svg>" "text" "<span>Modern JavaScript frameworks (I have a soft spot for <a href='https://vuejs.org/' target='_blank'>Vue.js</a>).</span>") }}
                 {{ partial "skill" (dict "icon" "<svg><use xlink:href='/images/svg-symbols.svg#speedometer'></use></svg>" "text" "Lightweight, performant websites") }}
                 {{ partial "skill" (dict "icon" "<svg><use xlink:href='/images/svg-symbols.svg#a11y'></use></svg>" "text" "Accessibility — the web is for everyone") }}
                 {{ partial "skill" (dict "icon" "<svg><use xlink:href='/images/svg-symbols.svg#smartphone'></use></svg>" "text" "Beautiful, clearly understandable UI") }}
-                {{ partial "skill" (dict "icon" "<svg><use xlink:href='/images/svg-symbols.svg#react'></use></svg>" "text" "<span>The right framework for the right job (<a href='https://facebook.github.io/react/' target='_blank'>React</a> <em>is</em> pretty cool though)</span>") }}
                 {{ partial "skill" (dict "iconClass" "animation" "text" "Meaningful and playful animations") }}
                 {{ partial "skill" (dict "icon" "<abbr title='Scalable Vector Graphics'>SVG</abbr>" "iconClass" "svg" "text" "Perfect for icons, logos, animations") }}
                 {{ partial "skill" (dict "icon" "<svg><use xlink:href='/images/svg-symbols.svg#eye'></use></svg>" "text" "Attention to detail : it's the little things that matter") }}
