--- a/site/layouts/index.html
+++ b/site/layouts/index.html
@@ -1,17 +1,13 @@
-{{ partial "head" . }}
-
-{{ partial "nav" . }}
+{{ partial "head" . }} {{ partial "nav" . }}
 
 <div id="barba-wrapper">
-    <main class="barba-container home">
-        <h1 class="main-title">👋 I'm <a href="{{ .Site.BaseURL }}about">Maël Brunet</a>, a
-            <span
-                    class="txt-rotate"
-                    data-period="2000"
-                    data-rotate='[ "front-end developer", "UI designer", "problem-solver" ]'></span><br>
-            based in Brussels, Belgium.
-        </h1>
-    </main>
+  <main class="barba-container home">
+    <h1 class="main-title">👋 I'm
+      <a href="{{ .Site.BaseURL }}about">Maël Brunet</a>, a
+      <!-- <span class="txt-rotate" data-period="2000" data-rotate='[ "front-end developer", "UI designer", "problem-solver" ]'></span> -->
+      <br> based in Brussels, Belgium.
+    </h1>
+  </main>
 </div>
 
-{{ partial "footer" . }}
+{{ partial "cookies" . }} {{ partial "footer" . }}
