--- a/src/styles/layout/_header.scss
+++ b/src/styles/layout/_header.scss
@@ -106,7 +106,7 @@ nav {
   }
 
   .menu-toggle {
-    z-index: 200;
+    z-index: 100;
     background-color: transparent;
     outline: none;
 
@@ -256,7 +256,7 @@ nav {
       position: absolute;
       left: -157px;
       bottom: 10px;
-      transition: 0.4s ease-out;
+      transition: .3s ease-out;
       width: 110px;
       height: 6px;
       background: $link-color;
