--- a/site/layouts/about/single.html
+++ b/site/layouts/about/single.html
@@ -113,7 +113,7 @@
 
             <div class="intro">
               <h1>About</h1>
-              <p>I'm a self-taught french (front-end) web developer and UI designer living in Brussels, Belgium. I code mostly on the client-side, designing accessible and beautiful interfaces with HTML & CSS, and programming awesome experiences with JavaScript.</p>
+              <p>I'm a self-taught french (front-end) web developer and UI designer living in Brussels, Belgium. I code mostly on the client-side, designing accessible and beautiful interfaces with HTML & CSS, and programming awesome experiences with JavaScript. For more information about my professional experience, please have a look at my <a href="{{ .Site.BaseURL }}resume">resume</a>.</p>
             </div>
 
             <h2>Things I<span> ❤ </span>️(and I like to think I'm pretty good at)</h2>
