--- a/site/layouts/projects/single.html
+++ b/site/layouts/projects/single.html
@@ -7,13 +7,12 @@
         <div class="container">
             <h1>Projects</h1>
 
-            <p>I enjoy making Stuff™ on the web :</p>
+            <p>Here are some non-work-related projects I enjoyed creating :</p>
             <ul>
                 <li><a href="#bots">Bots</a></li>
                 <li><a href="#websites">Websistes and web apps</a></li>
                 <li><a href="#presentations">Presentations</a></li>
             </ul>
-            <p>For work-related things, have a look at my <a href="{{ .Site.BaseURL }}resume">resume</a>.</p>
 
             <h2 id="bots">
                 <svg class="icon">
