--- a/site/layouts/resume/single.html
+++ b/site/layouts/resume/single.html
@@ -16,13 +16,19 @@
 
             <h2>Summary</h2>
             <ul class="summary">
-                <li>I am a self-taught front-end web developer and UI designer, based in Brussels (Belgium).</li>
+                <li>I am a self-taught front-end web developer and UI designer, currently based in Brussels (Belgium).</li>
                 <li>I am highly proficient in the technologies that are at the core of front-end development : HTML, CSS and Javascript. I believe very strong knowledge of these foundations is essential to being a good front-end developer, and everything else (frameworks in particular) can be learned as needed.</li>
-                <li>I believe coding standards and best practices are crucial to the long-term success of a digital product. I am not a "code ninja". If anything, I like to think of myself as a <a href="https://css-tricks.com/on-style-maintenance/" target="_blank">code janitor</a>.</li>
+                <li>I believe coding standards and best practices are crucial to the long-term success of a digital product. I am not a "code ninja". If anything, I like to think of myself as a code janitor.</li>
                 <li>I believe that a good user interface is like a joke : you shouldn't have to explain it.</li>
                 <li>I see open communication, empathy and inclusivity as the essential components of a well-functioning team.</li>
             </ul>
 
+            <hr>
+                <h2>Skills</h2>
+                <p>
+                    Do you like keywords ? I have project experience with the following tools and technologies :    
+                </p>
+                <p>Git, HTML, CSS, Sass, JavaScript (including ES6+), React, Vue, Redux, Jest, npm, Node, Webpack, Gulp, Babel, ESlint, Lodash, JQuery, Bootstrap, Jekyll, Hugo, Bash.</p>
             <hr>
 
             <h2>Work experience</h2>
@@ -33,7 +39,12 @@
                         <div class="year">Jan 2018 - now</div>
                     </div>
                     <div class="description">
-                        I joined Isabel Group as a <b>UI engineer</b>. Isabel Group is Belgium's largest fintech, providing banking services like Isabel 6, Zoomit and CodaBox to companies of all sizes. Part of a small team reporting directly to the CEO, I am in charge of developing a design system to ensure a first-rate and consistent user interface throughout all Isabel Group projects.
+                        I joined Isabel Group as a <b>UI engineer</b>. Isabel Group is Belgium's largest fintech, providing banking services like Isabel 6, Zoomit and CodaBox to companies of all sizes. Part of a small team reporting directly to the CEO, I worked on a variety of projects, including :
+                        <ul>
+                            <li>I helped to port part of the Isabel 6 application to React. Specifically, I set up ESlint, PropTypes and unit tests on the project, before developing some components required for the new features.</li>
+                            <li>I launched and lead the UI Community of Practice, gathering designers and developers from all teams within Isabel Group on a regular basis to share experiences and best practices.</li>
+                            <li>I designed and delivered a prototype in HTML / CSS for a new application to be developed in Angular by another team, with new features regularly added.</li>
+                        </ul>
                     </div>
                 </li>
                 <li>
@@ -42,7 +53,7 @@
                         <div class="year">Jan 2016 - Dec 2017</div>
                     </div>
                     <div class="description">
-                        I was working as a <b>front-end developer</b> at Emakina, part of one of the top three independent full-service digital agency groups in Europe. I focus on all things front-end related, working with technologies and frameworks including Git, NPM, Gulp, Sass, ES6 + Babel, ESlint, Twitter Bootstrap, Twig (and other templating engines), jQuery, Backbone, React, ...
+                        I was working as a <b>front-end developer</b> at Emakina, part of one of the top three independent full-service digital agency groups in Europe. I worked on a range of different technologies and frameworks, mostly on content-based websites.
                         Some of the projects I've contributed to include :
                         <ul>
                             <li>Lead front-end developer on the new <a href="http://www.ergo.be/nl_be/" target="_blank">Ergo insurance</a> Belgian corporate website.</li>
